# google-arts-crawler

./: .gitignore  PKGBUILD  README.md  app.py  crawler.py  meson.build  requirements-gui.txt  requirements.txt
data/: org.example.ArtsCrawler.desktop  org.example.ArtsCrawler.metainfo.xml
